Add icons to manifest: define icon sizes for extension and action button

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,11 @@
   "host_permissions": [
     "https://www.youtube.com/*"
   ],
+  "icons": {
+    "16": "icon1.png",
+    "48": "icon1.png",
+    "128": "icon1.png"
+  },
   "content_scripts": [
     {
       "matches": ["https://www.youtube.com/shorts/*"],
@@ -17,6 +22,11 @@
     }
   ],
   "action": {
+    "default_icon": {
+      "16": "icon1.png",
+      "48": "icon1.png",
+      "128": "icon1.png"
+    },
     "default_popup": "popup.html",
     "default_title": "YouTube Shorts Otomatik Kaydırma"
   }
